Set associcate Role and Permission 1-resolve wrong in  User-Model.js

--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,7 @@
     "database": "database_Login_test",
     "host": "localhost",
     "dialect": "postgres",
-    "operatorsAliases": false,
+    "operatorsAliases": true,
     "pool": {
       "max": 5,
       "min": 0,
